--- a/Dockerfile.accounts
+++ b/Dockerfile.accounts
@@ -12,7 +12,7 @@ RUN apt-get install sbt
 
 WORKDIR /build
 COPY . .
-COPY ./feesService/ .
+COPY ./accounts/ .
 RUN sbt stage
 
 # 2. Образ запуска
@@ -22,4 +22,4 @@ WORKDIR /app
 COPY --from=builder /build/target/universal/stage/bin bin
 COPY --from=builder /build/target/universal/stage/lib lib
 
-ENTRYPOINT sleep 2 && bin/scala-money-fees
+ENTRYPOINT sleep 2 && bin/accounts
