--- a/Dockerfile.cashbacks
+++ b/Dockerfile.cashbacks
@@ -12,7 +12,7 @@ RUN apt-get install sbt
 
 WORKDIR /build
 COPY . .
-COPY ./operationsService/ .
+COPY ./cashbacks/ .
 RUN sbt stage
 
 # 2. Образ запуска
@@ -22,4 +22,4 @@ WORKDIR /app
 COPY --from=builder /build/target/universal/stage/bin bin
 COPY --from=builder /build/target/universal/stage/lib lib
 
-ENTRYPOINT sleep 2 && bin/scala-money-operations
+ENTRYPOINT sleep 2 && bin/cashbacks
